--- a/style.css
+++ b/style.css
@@ -20,38 +20,67 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap');
 
-h1 {
-    display: flex;
-    justify-content: center;
-    margin-top: 1.5rem;
-}
-
 body {
     background-color: var(--page-color);
     color: var(--navbar-text-color);
+}
+
+#calc-container {
+    margin: 1.5rem auto;
+    width: max-content;
+    border: solid #0a0a0b;
+    border-radius: 0.5rem;
+}
+
+#calc-label {
+    background-color: #18141b;
+}
+
+h1 {
+    display: flex;
+    justify-content: center;
+    padding: 0.5ch;
+}
+
+#calculator-screen {
+    display: flex;
+    flex-direction: column;
+    padding: 1ch;
+    background-color: rgb(38, 35, 41);
+}
+
+#calculator-screen p {
+    padding-right: 1ch;
+    text-align: end;
+}
+
+#result {
+    font-size: xx-large;
 }
 
 #calculator-inputs {
     background-color: #18141b;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    width: 300px;
+    width: 360px;
 }
 
 .number, .operation {
     display: flex;
     justify-content: center;
     font-size: xx-large;
+    background-color: #332c3b;
+    padding: 0.5ch;
+    margin: 0.5ch;
+    border-radius: 0.5rem;
+}
+
+.number:hover, .operation:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+    background-color: #4a4055;
 }
 
 sup {
     font-size: medium;
 }
-
-/* .number {
-    color: red;
-}
-
-.operation {
-    color: blue;
-} */
