--- a/style.css
+++ b/style.css
@@ -27,9 +27,10 @@ body {
 
 #calc-container {
     margin: 1.5rem auto;
-    width: max-content;
+    width: 360px;
     border: solid #0a0a0b;
     border-radius: 0.5rem;
+    overflow: hidden;
 }
 
 #calc-label {
