--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ h1 {
     display: flex;
     flex-direction: column;
     overflow-x: scroll;
+    white-space: nowrap;
     padding: 1ch;
     background-color: rgb(38, 35, 41);
 }
@@ -82,14 +83,18 @@ h1 {
     border-radius: 0.5rem;
 }
 
-.keypad:hover, #clear-log:hover, .eq:hover {
+.keypad:hover,
+#clear-log:hover,
+.eq:hover {
     transform: scale(1.1);
     transition: transform 300ms;
     cursor: pointer;
     background-color: #4a4055;
 }
 
-.keypad:not(:hover), #clear-log:not(:hover), .eq:not(:hover) {
+.keypad:not(:hover),
+#clear-log:not(:hover),
+.eq:not(:hover) {
     transform: scale(1);
     transition: transform 300ms;
 }
@@ -113,6 +118,8 @@ sup {
     border-radius: 0.5rem;
     background-color: #18141b;
     width: 300px;
+    max-height: 300px;
+    overflow: auto;
     margin: auto;
 }
 
@@ -140,5 +147,23 @@ sup {
     background-color: #332c3b;
     padding: 1ch;
     border: none;
+    border-radius: 0.5rem;
+}
+
+/* custom scrollbar - doesn't work in all browsers */
+
+#calculator-screen::-webkit-scrollbar,
+#log::-webkit-scrollbar {
+    height: 10px;
+    width: 10px;
+    padding: 1ch;
+    margin: 1ch;
+}
+
+#calculator-screen::-webkit-scrollbar-thumb,
+#log::-webkit-scrollbar-thumb {
+    background-color: #3d3546;
+    border: solid transparent;
+    border-width: 0.3ch;
     border-radius: 0.5rem;
 }
